--- a/app/globals.css
+++ b/app/globals.css
@@ -12,12 +12,12 @@
   --colors-accent-hover: #ea6f5e;
   --colors-grey: #a09faf;
 
-  --fontFamily-primary: var(--font-marcellus);
-  --fontFamily-secondary: var(--font-urbanist);
-
-  --backgroundImage-hero: url("/assets/hero/bg.jpg");
+ --backgroundImage-hero: url("/assets/hero/bg.jpg");
+  
   --font-primary: "Marcellus", "marcellus";
   --font-secondary: "Urbanist", "urbanist";
+  --font-tertiary: "Bebas_Neue", "bebas";
+  --font-quarternary: "Dancing_Script", "dancing";
 }
 
 @theme inline {
@@ -25,6 +25,7 @@
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
+  --font-quarternary: var(--font-dancing);
   --color-sidebar-ring: var(--sidebar-ring);
   --color-sidebar-border: var(--sidebar-border);
   --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
